Fixed responsivenes on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@
   );
   --primary-color: #423b67;
   --secondary-color: white;
+  --third-color: rgb(102, 46, 237);
   --picture-width: 400px;
+  --border: 0px 5px 10px rgb(102, 46, 237, 0.5);
   --border-radius: 20px;
 }
 
@@ -36,12 +38,21 @@ h3 {
 }
 
 .hero {
-  padding: 170px 200px;
+  padding: 170px 0;
 }
 
-.hero a {
+a {
   color: var(--secondary-color);
   text-decoration: none;
+  padding: 20px 10px;
+  width: 175px;
+  transition: all 300ms ease-in-out;
+}
+
+a:hover {
+  color: var(--third-color);
+  box-shadow: var(--border);
+  transition: all 300ms ease-in-out;
 }
 
 .hero img {
@@ -49,4 +60,47 @@ h3 {
   border-radius: var(--border-radius);
   display: block;
   margin: 0 auto;
+}
+
+@media (max-width: 576px) {
+  h2 {
+    padding-top: 50px;
+    font-size: 30px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  h3 {
+    font-size: 15px;
+  }
+
+  .hero {
+    padding: 100px 30px;
+    text-align: center;
+  }
+  .hero img {
+    width: 300px;
+  }
+
+  .hero .big {
+    display: none;
+  }
+
+  .hero .small {
+    display: block;
+    padding: 50px 0;
+    text-align: center;
+  }
+}
+
+@media (min-width: 576px) {
+  .hero .big {
+    display: block;
+  }
+
+  .hero .small {
+    display: none;
+  }
 }
